Adjustment Home page 02

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,13 +2,21 @@
   <h1>Welcome to the Sample App</h1>
 
   <h2>
-    This is the home page for the
-    <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
+    This is the home page for the RAD Assignment.
   </h2>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
-</div>
+<%= link_to '<div class="btn btn-lg btn-danger"><i class="fa fa-gear"></i> Sign up now</div>'.html_safe,  root_path %>
 
-<%#= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
+</div>
+<div class="row">
+  <div class="col-md-4">
+    <h3>View Course as Guest User</h3>
+    <p>Browse and view courses as a guest and sign up later</p>
+    <%= link_to '<div class="btn btn-lg btn-success" style="font-size:15px;"><i class="fa fa-book"></i>  Browse all courses</div>'.html_safe,  root_path %>
+  </div>
+  <div class="col-md-4">
+    <h3>Sign in to your account</h3>
+     <p>Update your courses, rate your courses,view coordinator information</p>
+     <%= link_to '<div class="btn btn-lg btn-success" style="font-size:15px;"><i class="fa fa-address-card"></i>  Login to your account</div>'.html_safe,  root_path %>
+  </div>
+</div>
