--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -56,6 +56,10 @@ p {
 
 /* header */
 
+.navbar-fixed-top {
+    top: 5px;
+}
+
 #logo {
     color:white;
     float: left;
@@ -79,6 +83,7 @@ p {
   font-weight: bold;
     padding-top: 15px;
     margin-left: 16px;
+    margin-right: 16px;
     padding: 15px;
     background: lightblue;
     color: white;
