User Model with secure password

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,7 @@
     This is the home page for the RAD Assignment.
   </h2>
 
-<%= link_to '<div class="btn btn-lg btn-danger"><i class="fa fa-gear"></i> Sign up now</div>'.html_safe,  root_path %>
+<%= link_to '<div class="btn btn-lg btn-danger"><i class="fa fa-gear"></i> Sign up now</div>'.html_safe,  signup_path %>
 
 </div>
 <div class="row">
