--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,43 @@
 <footer class="footer">
-  <small>
-    The <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
-  </small>
-  <nav>
-    <ul>
-
-
-      <li><a href="http://news.railstutorial.org/">News</a></li>
-    </ul>
-  </nav>
+<div class="row" style="padding-left:20px;padding-top:20px;">
+<div class=col-md-3 >
+<h4>Contact Us</h4>
+<form action="#">
+  <div class="form-group">
+    <input type="text" id="name" placeholder="Name">
+  </div>
+  <div class="form-group">
+    <input type="email" id="email" placeholder="Email">
+  </div>
+   <div class="form-group">
+    <textarea id="message" placeholder="Messasge" style="height:120px"></textarea>
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+</br>
+<p>Tel: 0123456789</p>
+<p>Fax: 0123456789</p>
+<p>exmaple@rmit.edu.au</p>
+</div>
+<div class=col-md-3>
+<h4>General Inquiries</h4>
+<p>Andy Song</p>
+<p>Juliang Jiang</p>
+<p>Ali</p>
+</div>
+<div class=col-md-3>
+<h4>Useful Links</h4>
+<p>RMIT Course</p>
+<p>RMIT Help Desk</p>
+<p>RMIT International</p>
+</div>
+<div class=col-md-3>
+<h4>Media</h4>
+<p>Youtube</p>
+<p>Twitter</p>
+<p>Instagram</p>
+<p>Facebook</p>
+<p>LinkedIn</p>
+</div>
+</div>
 </footer>
