--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,14 @@
-<header class="navbar navbar-fixed-top">
+<header class="navbar">
   <div class="container">
     <%= link_to "sample app", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><i class="fa fa-crosshairs"></i><%= link_to "Category",    root_path %></li>
-
         <li><i class="fa fa-location-arrow"></i><%= link_to "Locations",    root_path %></li>
         <li><i class="fa fa-address-card"></i><%= link_to "Log in", '#' %></li>
       </ul>
     </nav>
   </div>
 </header>
+
 
