--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,28 @@
       <ul class="nav navbar-nav navbar-right">
         <li><i class="fa fa-crosshairs"></i><%= link_to "Category",    root_path %></li>
         <li><i class="fa fa-location-arrow"></i><%= link_to "Locations",    root_path %></li>
-        <li><i class="fa fa-address-card"></i><%= link_to "Log in", '#' %></li>
+
+
+        <% if logged_in? %>
+          <li><%= link_to "Users", '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Log out", logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+         <li><i class="fa fa-address-card"></i><%= link_to "Log in", login_path %></li>
+        <% end %>
+
+
       </ul>
     </nav>
   </div>
