--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
 
 
         <% if logged_in? %>
-          <li><%= link_to "Users", '#' %></li>
+          <li><i class="fa fa-file"></i><%= link_to "New Course", '#' %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
@@ -25,6 +25,8 @@
         <% else %>
          <li><i class="fa fa-address-card"></i><%= link_to "Log in", login_path %></li>
         <% end %>
+
+
 
 
       </ul>
