--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
-<div class="row" style="padding-left:20px;padding-top:20px;">
+<div class="row" style="padding-left:20px;padding-top:20px;padding-bottom:20px;">
 <div class=col-md-3 >
 <h4>Contact Us</h4>
 <form action="#">
