--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,36 +12,13 @@
   <div class="col-md-4">
     <h3>View Course as Guest User</h3>
     <p>Browse and view courses as a guest and sign up later</p>
-    <%= link_to '<div class="btn btn-lg btn-success" style="font-size:15px;"><i class="fa fa-book"></i>  Browse all courses</div>'.html_safe,  root_path %>
+    <%= link_to '<div class="btn btn-lg btn-success" style="font-size:15px;"><i class="fa fa-book"></i>  Browse all courses</div>'.html_safe,  courses_path %>
   </div>
   <div class="col-md-4">
     <h3>Sign in to your account</h3>
      <p>Update your courses, rate your courses,view coordinator information</p>
-     <%= link_to '<div class="btn btn-lg btn-success" style="font-size:15px;"><i class="fa fa-address-card"></i>  Login to your account</div>'.html_safe,  root_path %>
+     <%= link_to '<div class="btn btn-lg btn-success" style="font-size:15px;"><i class="fa fa-address-card"></i>  Login to your account</div>'.html_safe,  login_path %>
   </div>
-
-
-  <div class="col-md-4">
-
-  <div class="dropdown">
-  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
-  <span class="caret"></span></button>
-  <ul class="dropdown-menu">
-    <li><a href="#">HTML</a></li>
-    <li><a href="#">CSS</a></li>
-    <li><a href="#">JavaScript</a></li>
-  </ul>
-</div>
-
-   </div>
-
-
-
-
-
-
-
-
 
 
 
