--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,14 +8,14 @@
 
 
         <% if logged_in? %>
-          <li><i class="fa fa-file"></i><%= link_to "New Course", '#' %></li>
+          <li><i class="fa fa-file"></i><%= link_to "New Course", new_course_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
+              <i class="fa fa-user" style="color:white;"></i> <%= @current_user.name %> <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", '#' %></li>
+              <li><%= link_to "View Profile", current_user %></li>
+              <li><%= link_to "Edit Profile", '#' %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path, method: :delete %>
