courses foreign key added

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -21,23 +21,31 @@
 </div>
 <div class=col-md-3>
 <h4>General Inquiries</h4>
-<p>Andy Song</p>
-<p>Juliang Jiang</p>
-<p>Ali</p>
+<a>Andy Song</a></br>
+<a>Juliang Jiang</a></br>
+<a>Ali</a></br>
 </div>
 <div class=col-md-3>
 <h4>Useful Links</h4>
-<p>RMIT Course</p>
-<p>RMIT Help Desk</p>
-<p>RMIT International</p>
+<a>RMIT Course</a></br>
+<a>RMIT Help Desk</a></br>
+<a>RMIT International</a></br>
 </div>
 <div class=col-md-3>
 <h4>Media</h4>
-<p>Youtube</p>
-<p>Twitter</p>
-<p>Instagram</p>
-<p>Facebook</p>
-<p>LinkedIn</p>
+<div class="hover_img">
+     <a href="#">Youtube<span><img src="assets/rails.png" height="50" /></span></a>
 </div>
+<div class="hover_img">
+     <a href="#">Facebook<span><img src="assets/rails.png" height="50" /></span></a>
+</div>
+<div class="hover_img">
+     <a href="#">LinkedIn<span><img src="assets/rails.png" height="50" /></span></a>
+</div>
+<div class="hover_img">
+     <a href="#">Instagram<span><img src="assets/rails.png" height="50" /></span></a>
+</div>
+
+
 </div>
 </footer>
