--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -219,3 +219,12 @@ input {
   margin-top: 45px;
   @include box_sizing;
 }
+.hover_img a { position:relative; }
+.hover_img a span { position:absolute; display:none; z-index:99; }
+.hover_img a:hover span { display:block; }
+
+.coordinator-image{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
