--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -34,16 +34,16 @@
 <div class=col-md-3>
 <h4>Media</h4>
 <div class="hover_img">
-     <a href="#">Youtube<span><img src="assets/rails.png" height="50" /></span></a>
+     <a href="#">Youtube<span><%= image_tag("rails.png")%></span></a>
 </div>
 <div class="hover_img">
-     <a href="#">Facebook<span><img src="assets/rails.png" height="50" /></span></a>
+     <a href="#">Facebook<span><%= image_tag("rails.png")%></span></a>
 </div>
 <div class="hover_img">
-     <a href="#">LinkedIn<span><img src="assets/rails.png" height="50" /></span></a>
+     <a href="#">LinkedIn<span><%= image_tag("rails.png")%></span></a>
 </div>
 <div class="hover_img">
-     <a href="#">Instagram<span><img src="assets/rails.png" height="50" /></span></a>
+     <a href="#">Instagram<span><%= image_tag("rails.png")%></span></a>
 </div>
 
 
