--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -34,16 +34,19 @@
 <div class=col-md-3>
 <h4>Media</h4>
 <div class="hover_img">
-     <a href="#">Youtube<span><%= image_tag("rails.png")%></span></a>
+     <a href="#">Youtube<span><%= image_tag("youtube.png",size: "120x80")%></span></a>
 </div>
 <div class="hover_img">
-     <a href="#">Facebook<span><%= image_tag("rails.png")%></span></a>
+     <a href="#">Facebook<span><%= image_tag("fb.png",size: "70x70")%></span></a>
 </div>
 <div class="hover_img">
-     <a href="#">LinkedIn<span><%= image_tag("rails.png")%></span></a>
+     <a href="#">LinkedIn<span><%= image_tag("link.png",size: "70x70")%></span></a>
 </div>
 <div class="hover_img">
-     <a href="#">Instagram<span><%= image_tag("rails.png")%></span></a>
+     <a href="#">Instagram<span><%= image_tag("insta.png",size: "80x80")%></span></a>
+</div>
+<div class="hover_img">
+     <a href="#">Twitter<span><%= image_tag("twitter.png",size: "80x80")%></span></a>
 </div>
 
 
