--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
     <%= link_to "Project app", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><i class="fa fa-crosshairs"></i><%= link_to "Category",    root_path %></li>
-        <li><i class="fa fa-location-arrow"></i><%= link_to "Locations",    root_path %></li>
+        <li><i class="fa fa-crosshairs"></i><%= link_to "Category",     '#' %></li>
+        <li><i class="fa fa-location-arrow"></i><%= link_to "Locations",     '#' %></li>
 
 
         <% if logged_in? %>
