--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,20 @@
     <%= link_to "Project app", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><i class="fa fa-crosshairs"></i><%= link_to "Category",     '#' %></li>
+
+
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fa fa-crosshairs"></i> Category <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Web Development", '#'  %></li>
+              <li><%= link_to "Mobile Development", '#' %></li>
+              <li><%= link_to "Full Stack Dev", '#' %></li>
+        </ul>
+          </li>
+
+         </li>
         <li><i class="fa fa-location-arrow"></i><%= link_to "Locations",     '#' %></li>
 
 
@@ -13,6 +26,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-user" style="color:white;"></i> <%= @current_user.name %> <b class="caret"></b>
             </a>
+
             <ul class="dropdown-menu">
               <li><%= link_to "View Profile", current_user %></li>
               <li><%= link_to "Edit Profile", '#' %></li>
