--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,13 +14,21 @@
               <% (Category.all).each do |cat| %>
               <li><%= link_to cat.name, courses_path(:name=>cat.name)  %></li>
               <% end %>
+            </ul>
+        </li>
+       <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fa fa-location-arrow"></i> Location <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Show All", courses_path %></li>
+              <% (Location.all).each do |loc| %>
+              <li><%= link_to loc.locationname, courses_path(:locationname=>loc.locationname)  %></li>
+              <% end %>
+            </ul>
+        </li>
 
 
-        </ul>
-          </li>
-
-         </li>
-        <li><i class="fa fa-location-arrow"></i><%= link_to "Locations",     '#' %></li>
 
 
         <% if logged_in? %>
