--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,27 +3,45 @@
     <%= link_to "Project app", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-
-
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-crosshairs"></i> Category <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Show All", courses_path %></li>
+              <li class="divider"></li>
               <% (Category.all).each do |cat| %>
               <li><%= link_to cat.name, courses_path(:name=>cat.name)  %></li>
               <% end %>
+              <% if logged_in? %>
+              <li class="divider"></li>
+              <li>
+                <li><%= link_to "New Category", catcreate_path %></li>
+              </li>
+              <% end %>
             </ul>
         </li>
+
+
+
+
+
+
        <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-location-arrow"></i> Location <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "Show All", courses_path %></li>
+              <li class="divider"></li>
               <% (Location.all).each do |loc| %>
               <li><%= link_to loc.locationname, courses_path(:locationname=>loc.locationname)  %></li>
+              <% end %>
+              <% if logged_in? %>
+              <li class="divider"></li>
+              <li>
+                <li><%= link_to "New Location", locationcreate_path %></li>
+              </li>
               <% end %>
             </ul>
         </li>
