--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,6 +1,46 @@
 <% provide(:title, "New Course") %>
 <h1>New Course</h1>
 
-<%= render 'form', course: @course %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for('', url: createcourse_path) do |f| %>
+      <%#= render 'shared/error_messages' %>
+
+      <%= f.label 'Course Name' %>
+      <%= f.text_field :name, class: 'form-control' %>
+
+      <%= f.label 'Prerequisite' %>
+      <%= f.text_field :prerequisite, class: 'form-control' %>
+
+      <%#= f.label 'Category' %>
+      <%#= f.text_field :catname, class: 'form-control' %>
+
+
+      <%= f.label :Categories %><br />
+
+      <% (Category.all).each do |cat| %>
+
+      <div class="categories">
+      <%= f.radio_button :catname, cat.name %> <%=cat.name%><br />
+      </div>
+
+
+      <% end %>
+
+
+      <br />
+      <%= f.label 'Location' %>
+      <%= f.text_field :locationname, class: 'form-control' %>
+
+
+
+
+
+      <%= f.submit "Create my course", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
+
+<%#= render 'form', course: @course %>
 
 <%#= link_to 'Back', courses_path %>
