Course Viewing Done

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -236,3 +236,17 @@ input {
   width:5%;
 }
 .form-control { resize: none; }
+
+.course-show{
+border-bottom: 1px solid lightgrey;
+}
+.course-blockall{
+margin:18px 0px 18px 0px;
+padding:18px 0px 18px 0px;
+border-bottom: 1px solid lightgrey;
+}
+
+.course-block{
+background:lightgrey;
+padding:10px 10px 10px 20px;
+}
