--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -241,12 +241,16 @@ input {
 border-bottom: 1px solid lightgrey;
 }
 .course-blockall{
-margin:18px 0px 18px 0px;
-padding:18px 0px 18px 0px;
-border-bottom: 1px solid lightgrey;
+  margin:18px 0px 18px 0px;
+  padding:18px 0px 18px 0px;
+  border-bottom: 1px solid lightgrey;
 }
 
 .course-block{
-background:lightgrey;
-padding:10px 10px 10px 20px;
+  background:lightgrey;
+  padding:10px 10px 10px 20px;
+}
+.new-course{
+  background: lightgrey;
+  padding: 20px 35px 20px 35px;
 }
