--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -43,7 +43,7 @@
     <div id="coordinators" class="tab-pane fade">
 
      <% @users.each do |user| %>
-     <div class="row course-block" style="margin:18px 0px 18px 0px;padding:18px 0px 18px 0px;border-bottom: 1px solid lightgrey;">
+     <div class="row course-blockall" >
         <div class="col-md-12 col-centered">
 
           <div><%= gravatar_for_c user %></div>
