--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,6 +1,61 @@
-<h1>Editing Course</h1>
+<% provide(:title, "Edit Course") %>
+<h1>Edit Course</h1>
 
-<%= render 'form', course: @course %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 new-course">
+    <%= form_for('', url: createcourse_path) do |f| %>
+
+
+      <%= f.label 'Course Name' %>
+      <%= f.text_field :name, class: 'form-control' %>
+
+      <%= f.label 'Prerequisite' %>
+      <%= f.text_field :prerequisite, class: 'form-control' %>
+
+      <%= f.label 'Description' %>
+      <%= f.text_area(:description, size: '50x10', class: 'form-control') %>
+
+      <%#= f.label 'Category' %>
+      <%#= f.text_field :catname, class: 'form-control' %>
+
+
+      <%= f.label :Categories %><br />
+
+      <% (Category.all).each do |cat| %>
+
+      <div class="categories">
+      <%= f.radio_button :catname, cat.name %> <%=cat.name%><br />
+      </div>
+
+
+      <% end %>
+
+      <br />
+      <%= f.label 'Location' %>
+      <% (Location.all).each do |loc| %>
+
+      <div class="locations">
+      <%= f.radio_button :locationname, loc.locationname %> <%=loc.locationname%><br />
+      </div>
+
+
+      <% end %>
+
+      <br />
+      <span class="picture">
+        <%= f.file_field :picture %>
+      </span>
+      <%#= f.label 'Location' %>
+      <%#= f.text_field :locationname, class: 'form-control' %>
+
+
+
+
+
+      <%= f.submit "Edit my course", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
 
 <%= link_to 'Show', @course %> |
 <%= link_to 'Back', courses_path %>
