--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -2,7 +2,7 @@
 <h1>New Course</h1>
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-6 col-md-offset-3 new-course">
     <%= form_for('', url: createcourse_path) do |f| %>
       <%#= render 'shared/error_messages' %>
 
