--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -31,8 +31,13 @@
         <% end %>
 
         <p>Created <%= course.created_at%></p>
+        <div style="float:right;">
 
 
+
+
+        <p><i class="fa fa-thumbs-up" style="margin-right: 3em;"></i><i class="fa fa-thumbs-down" style="margin-right: 3em;"></i></p>
+        </div>
         <td><%#= link_to 'Edit', edit_course_path(course) %></td>
         <td><%#= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </div>
