--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'Create a Category') %>
-<h1>Sign up</h1>
+<h1>Create Course</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@cat, url: catcreate_path) do |f| %>
-      <%#= render 'shared/error_messages' %>
+    <%= form_for(@category, url: catcreate_path) do |f| %>
+        <%= render 'shared/categoryerror_messages' %>
 
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
