--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'Create a Location') %>
-<h1>Sign up</h1>
+<h1>Create Location up</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@location, url: locationcreate_path) do |f| %>
-      <%#= render 'shared/error_messages' %>
+      <%= render 'shared/locationerror_messages' %>
 
       <%= f.label 'Location' %>
       <%= f.text_field :locationname, class: 'form-control' %>
