--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -254,3 +254,8 @@ border-bottom: 1px solid lightgrey;
   background: lightgrey;
   padding: 20px 35px 20px 35px;
 }
+
+.locations label{
+  font-weight:normal!important;
+}
+
