--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,20 +1,8 @@
 <footer class="footer">
 <div class="row" style="padding-left:20px;padding-top:20px;padding-bottom:20px;">
-<div class=col-md-3 >
-<h4>Contact Us</h4>
-<form action="#">
-  <div class="form-group">
-    <input type="text" id="name" placeholder="Name">
-  </div>
-  <div class="form-group">
-    <input type="email" id="email" placeholder="Email">
-  </div>
-   <div class="form-group">
-    <textarea id="message" placeholder="Messasge" style="height:120px"></textarea>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
-</br>
+<div class=col-md-3 style="padding-top: 10px;">
+<%= link_to 'Contact Us', contact_path ,class:"h4" %>
+</br></br>
 <p>Tel: 0123456789</p>
 <p>Fax: 0123456789</p>
 <p>exmaple@rmit.edu.au</p>
